src/components/grid-card/grid-card.sass
.grid-card
  color: white
  position: relative

  &:before
    content: ''
    position: absolute
    top: -1rem
    left: -1rem
    right: -1rem
    bottom: -1rem
    z-index: 0

  > .card
    padding: 3rem
    display: flex
    flex-direction: column
    justify-content: flex-end
    transition: box-shadow .5s ease
    width: 100%
    height: 100%
    overflow: hidden

    > .shine
      content: ''
      z-index: 3
      position: absolute
      top: 0
      left: 0
      width: 100%
      height: 100%
      opacity: 0
      pointer-events: none
      transition: opacity .2s ease

    > img
      position: absolute
      top: 0
      left: 0
      z-index: 1
      width: 100%
      object-fit: cover
      object-position: top

      &[alt="Viktor Hesselbom"], &[alt="Anders Olausson"]
        object-position: center

      @supports(object-fit: cover)
        height: 100%

    > .name
      font-size: 4rem
      line-height: 5rem
      font-weight: bold
      text-transform: uppercase

      &.-large
        font-size: 6rem
        line-height: 1

    > .name, > .info, > .meta
      position: relative
      z-index: 3
      transition: transform .2s ease, margin .2s ease

    > .info
      height: 0
      opacity: 0
      transition: height .3s ease, opacity .3s ease, padding .3s ease
      overflow: hidden
      max-width: 49rem

    > .info > p
      font-size: 1.6rem
      line-height: 1.5
      margin-bottom: 1em

      &.email
        width: 100%
        overflow: hidden
        text-overflow: ellipsis

      > a
        color: inherit

      &:last-child
        margin-bottom: 0

    > .meta
      display: flex
      margin-top: 1.5rem
      align-items: center
      flex-wrap: wrap

      > .data
        font-size: 1.6rem
        margin-right: 2.5rem

        > .title
          color: $color-red
          text-transform: uppercase
          margin-bottom: 0.5rem

        > .value
          color: white

      > .action
        border-left: 1px solid rgba(white, 0.3)
        padding-left: 2.5rem
        display: flex

        > .link
          margin-right: 2rem
          display: inline-block
          height: 3.7rem

        &.-block
          width: 100%
          border-left: 0
          border-top: 1px solid rgba(white, 0.3)
          margin-top: 2rem
          padding-top: 2rem
          padding-left: 0

    @media screen and (max-width: $medium-grid)
      > .meta
        > .action
          width: 100%
          border-left: 0
          border-top: 1px solid rgba(white, 0.3)
          margin-top: 2rem
          padding-top: 2rem
          padding-left: 0

    @media screen and (max-width: $small-grid)
      padding: 1.5rem

      > .name
        font-size: 1.6rem
        line-height: 2rem

        &.-large
          font-size: 2rem

      > .info > p
        font-size: 1.4rem

      > .meta
        display: none

  .no-touchevents &:hover
    > .card
      z-index: 10
      box-shadow: 0 0.5rem 10rem rgba(black, 0.2)

      > .name
        margin-bottom: 1.5rem

      > .info, > .shine
        opacity: 1

  .no-touchevents &:not(:hover):not(.-open),
  .touchevents &:not(.-open)
    > .card
      > .info
        height: 0 !important

  &.-open
    outline: none

    > .card
      > .name
        margin-bottom: 1.5rem

      > .info
        opacity: 1

